--- a/html/index.html
+++ b/html/index.html
@@ -24,7 +24,8 @@
     <script src="../js/splitting.min.js"></script>
     <script src="../js/circletype.min.js"></script>
     <script src="../js/fullpage.min.js"></script>
-    <script src="../js/common.js"></script>
+    <script src="../js/jquery-3.6.1.min.js"></script>
+    <script src="../js/common.js" defer></script>
   </head>
 
   <body>
